<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:rsb="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingTop="@dimen/activity_margin_half"
			android:paddingBottom="@dimen/activity_margin_half">

			<LinearLayout
				style="@style/SectionStyle"
				android:paddingLeft="@dimen/rectangle_margin_half"
				android:layout_marginTop="0dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="@dimen/text_size_header"
					android:text="@string/app_name"
					android:id="@+id/tv_header"
					android:layout_gravity="center"/>

			</LinearLayout>

			<LinearLayout
				style="@style/SectionStyle">

				<LinearLayout
					style="@style/SectionHeaderStyle">

					<LinearLayout
						style="@style/SectionTitleStyle"
						android:id="@+id/description_module">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/module_label"/>

					</LinearLayout>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="@dimen/gap_margin"
						android:text="@string/module_description"
						android:textIsSelectable="false"/>

				</LinearLayout>

				<LinearLayout
					style="@style/SectionBodyStyle">

					<LinearLayout
						style="@style/SectionBodySplitStyle">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/activate_label"/>

					</LinearLayout>

					<LinearLayout
						style="@style/SectionBodySplitStyle">

						<Button
							style="@style/ButtonStyle"
							android:text="@string/activate_on"
							android:id="@+id/button_activate"/>

					</LinearLayout>

				</LinearLayout>

			</LinearLayout>

			<LinearLayout
				style="@style/SectionStyle">

				<LinearLayout
					style="@style/SectionHeaderStyle">

					<LinearLayout
						style="@style/SectionTitleStyle"
						android:id="@+id/description_glyphGame">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/glyph_game_label"/>

					</LinearLayout>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="@dimen/gap_margin"
						android:text="@string/glyph_game_description"/>

				</LinearLayout>

				<LinearLayout
					style="@style/SectionBodyStyle">

					<LinearLayout
						style="@style/SectionBodySplitStyle">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/correct_glyphs_label"/>

					</LinearLayout>

					<LinearLayout
						style="@style/SectionBodySplitStyle">

						<Button
							style="@style/ButtonStyle"
							android:text="@string/correct_glyphs_on"
							android:id="@+id/button_correctGlyphs"/>

					</LinearLayout>

				</LinearLayout>

			</LinearLayout>

			<LinearLayout
				style="@style/SectionStyle">

				<LinearLayout
					style="@style/SectionHeaderStyle">

					<LinearLayout
						style="@style/SectionTitleStyle"
						android:id="@+id/description_commandChannel">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/command_channel_label"/>

					</LinearLayout>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="@dimen/gap_margin"
						android:text="@string/command_channel_description"/>

				</LinearLayout>

				<LinearLayout
					style="@style/SectionBodyStyle">

					<LinearLayout
						style="@style/SectionBodySplitStyle">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/glyph_key_label"/>

					</LinearLayout>

					<LinearLayout
						style="@style/SectionBodySplitStyle">

						<Button
							style="@style/ButtonStyle"
							android:text="@string/glyph_key_off"
							android:id="@+id/button_glyphKey"/>

					</LinearLayout>

				</LinearLayout>

				<LinearLayout
					style="@style/SectionBodyStyle">

					<LinearLayout
						style="@style/SectionBodySplitStyle">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/glyph_speed_label"/>

					</LinearLayout>

					<LinearLayout
						style="@style/SectionBodySplitStyle">

						<Button
							style="@style/ButtonStyle"
							android:text="@string/glyph_speed_off"
							android:id="@+id/button_glyphSpeed"/>

					</LinearLayout>

				</LinearLayout>

			</LinearLayout>

			<LinearLayout
				style="@style/SectionStyle">

				<LinearLayout
					style="@style/SectionHeaderStyle">

					<LinearLayout
						style="@style/SectionTitleStyle"
						android:id="@+id/description_normalHack">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/normal_hack_label"/>

					</LinearLayout>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="@dimen/gap_margin"
						android:text="@string/normal_hack_description"/>

				</LinearLayout>

				<LinearLayout
					style="@style/SectionBodyStyle">

					<LinearLayout
						style="@style/SectionBodySplitStyle">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/normal_hack_label"/>

					</LinearLayout>

					<LinearLayout
						style="@style/SectionBodySplitStyle">

						<Button
							style="@style/ButtonStyle"
							android:text="@string/normal_hack_off"
							android:id="@+id/button_normalHack"/>

					</LinearLayout>

				</LinearLayout>

			</LinearLayout>

			<LinearLayout
				style="@style/SectionStyle"
				android:id="@+id/ll_uglyCheats">

				<LinearLayout
					style="@style/SectionHeaderStyle">

					<LinearLayout
						style="@style/SectionTitleStyle"
						android:id="@+id/description_unglyCheats">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/ungly_cheats_label"/>

					</LinearLayout>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="@dimen/gap_margin"
						android:text="@string/ungly_cheats_description"/>

				</LinearLayout>

				<LinearLayout
					style="@style/SectionBodyStyle">

					<LinearLayout
						style="@style/SectionBodySplitStyle">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/bypass_label"/>

					</LinearLayout>

					<LinearLayout
						style="@style/SectionBodySplitStyle">

						<Button
							style="@style/ButtonStyle"
							android:text="@string/bypass_off"
							android:id="@+id/button_bypass"/>

					</LinearLayout>

				</LinearLayout>

				<LinearLayout
					style="@style/SectionBodyStyle">

					<LinearLayout
						style="@style/SectionBodySplitStyle">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/speed_bonus_label"/>

					</LinearLayout>

					<LinearLayout
						style="@style/SectionBodySplitStyle">

						<org.florescu.android.rangeseekbar.RangeSeekBar
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:layout_marginLeft="@dimen/gap_margin"
							android:id="@+id/slider_speedBonus"
							rsb:valuesAboveThumbs="true"
							rsb:absoluteMaxValue="90"
							rsb:absoluteMinValue="10"
							rsb:activateOnDefaultValues="true"
							rsb:showLabels="false"
							rsb:thumbDisabled="@drawable/rectangle_slider"
							rsb:thumbNormal="@drawable/rectangle_slider"
							rsb:thumbPressed="@drawable/rectangle_slider"/>

					</LinearLayout>

				</LinearLayout>

			</LinearLayout>

			<LinearLayout
				style="@style/SectionStyle">

				<LinearLayout
					style="@style/SectionHeaderStyle">

					<LinearLayout
						style="@style/SectionTitleStyle"
						android:id="@+id/description_misc">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/misc_label"/>

					</LinearLayout>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="@dimen/gap_margin"
						android:text="@string/misc_description"/>

				</LinearLayout>

				<LinearLayout
					style="@style/SectionBodyStyle">

					<LinearLayout
						style="@style/SectionBodySplitStyle">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/sound_label"/>

					</LinearLayout>

					<LinearLayout
						style="@style/SectionBodySplitStyle">

						<Button
							style="@style/ButtonStyle"
							android:text="@string/sound_on"
							android:id="@+id/button_sound"/>

					</LinearLayout>

				</LinearLayout>

				<LinearLayout
					style="@style/SectionBodyStyle">

					<LinearLayout
						style="@style/SectionBodySplitStyle">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/debug_log_label"/>

					</LinearLayout>

					<LinearLayout
						style="@style/SectionBodySplitStyle">

						<Button
							style="@style/ButtonStyle"
							android:text="@string/debug_log_off"
							android:id="@+id/button_debugLog"/>

					</LinearLayout>

				</LinearLayout>

				<LinearLayout
					style="@style/SectionBodyStyle">

					<LinearLayout
						style="@style/SectionBodySplitStyle">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/logfile_label"/>

					</LinearLayout>

					<LinearLayout
						style="@style/SectionBodySplitStyle">

						<Button
							style="@style/ButtonStyle"
							android:text="@string/logfile_off"
							android:id="@+id/button_logfile"/>

					</LinearLayout>

				</LinearLayout>

			</LinearLayout>

			<LinearLayout
				style="@style/SectionStyle">

				<LinearLayout
					style="@style/SectionHeaderStyle"
					android:layout_marginBottom="0dp">

					<LinearLayout
						style="@style/SectionTitleStyle"
						android:id="@+id/description_credits">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/credits_label"/>

					</LinearLayout>

					<LinearLayout
						android:orientation="vertical"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_weight="0"
						android:layout_marginLeft="@dimen/gap_margin">

						<ImageView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:src="@mipmap/ic_launcher"/>

					</LinearLayout>

					<LinearLayout
						android:orientation="vertical"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:layout_marginLeft="@dimen/gap_margin">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/credits_version"
							android:id="@+id/tv_credits"/>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginTop="@dimen/text_margin"
							android:text="@string/credits_developer"/>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginTop="@dimen/text_margin"
							android:text="@string/credits_thanks"/>

					</LinearLayout>

				</LinearLayout>

			</LinearLayout>

			<LinearLayout
				style="@style/SectionStyle">

				<LinearLayout
					style="@style/SectionHeaderStyle">

					<LinearLayout
						style="@style/SectionTitleStyle"
						android:id="@+id/description_donation">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/donation_label"/>

					</LinearLayout>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="@dimen/gap_margin"
						android:text="@string/donation_description"
						android:id="@+id/tv_donate"/>

				</LinearLayout>

				<LinearLayout
					style="@style/SectionBodyStyle">

					<LinearLayout
						style="@style/SectionBodySplitStyle">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/bitcoin"/>

					</LinearLayout>

					<LinearLayout
						style="@style/SectionBodySplitStyle">

						<Button
							style="@style/ButtonStyle"
							android:text="@string/donate"
							android:id="@+id/button_donate"/>

					</LinearLayout>

				</LinearLayout>

			</LinearLayout>

		</LinearLayout>

	</ScrollView>

</LinearLayout>
